Rewrite RemoteSuggestionsDatabaseTests to use FakeDB

Previously, these tests used real databases, including disk I/O. Better
to use fakes for unit tests.

Bug: 755985
Change-Id: Icb9043593ff3bce6f54b9803294cf81a0944d4b3