components/ntp_snippets/remote/remote_suggestions_database_unittest.cc
@@ -4,21 +4,19 @@
 
 #include "components/ntp_snippets/remote/remote_suggestions_database.h"
 
+#include <map>
 #include <memory>
 
 #include "base/bind.h"
 #include "base/callback.h"
 #include "base/files/file_path.h"
-#include "base/files/scoped_temp_dir.h"
 #include "base/macros.h"
-#include "base/memory/ptr_util.h"
-#include "base/run_loop.h"
-#include "base/test/scoped_task_environment.h"
-#include "base/threading/thread_task_runner_handle.h"
+#include "components/leveldb_proto/testing/fake_db.h"
 #include "components/ntp_snippets/remote/proto/ntp_snippets.pb.h"
 #include "testing/gmock/include/gmock/gmock.h"
 #include "testing/gtest/include/gtest/gtest.h"
 
+using leveldb_proto::test::FakeDB;
 using testing::ElementsAre;
 using testing::Eq;
 using testing::IsEmpty;
@@ -61,27 +59,29 @@ MATCHER_P(PointeeEq, ptr_to_expected, "") {
 
 class RemoteSuggestionsDatabaseTest : public testing::Test {
  public:
-  RemoteSuggestionsDatabaseTest() {
-    EXPECT_TRUE(database_dir_.CreateUniqueTempDir());
-  }
-
-  ~RemoteSuggestionsDatabaseTest() override {
-    // We need to run until idle after deleting the database, because
-    // ProtoDatabaseImpl deletes the actual LevelDB asynchronously on the task
-    // runner. Without this, we'd get reports of memory leaks.
-    db_.reset();
-    RunUntilIdle();
-  }
+  RemoteSuggestionsDatabaseTest()
+      : suggestion_db_(nullptr), image_db_(nullptr) {}
 
   void CreateDatabase() {
-    // Explicitly destroy any existing database first, so it releases the lock
-    // on the file.
+    // The FakeDBs are owned by |db_|, so clear our pointers before resetting
+    // |db_| itself.
+    suggestion_db_ = nullptr;
+    image_db_ = nullptr;
+    // Explicitly destroy any existing database before creating a new one.
     db_.reset();
 
-    db_.reset(new RemoteSuggestionsDatabase(database_dir_.GetPath()));
+    auto suggestion_db =
+        std::make_unique<FakeDB<SnippetProto>>(&suggestion_db_storage_);
+    auto image_db =
+        std::make_unique<FakeDB<SnippetImageProto>>(&image_db_storage_);
+    suggestion_db_ = suggestion_db.get();
+    image_db_ = image_db.get();
+    db_ = std::make_unique<RemoteSuggestionsDatabase>(
+        std::move(suggestion_db), std::move(image_db), base::FilePath());
   }
 
-  void RunUntilIdle() { scoped_task_environment_.RunUntilIdle(); }
+  FakeDB<SnippetProto>* suggestion_db() { return suggestion_db_; }
+  FakeDB<SnippetImageProto>* image_db() { return image_db_; }
 
   RemoteSuggestionsDatabase* db() { return db_.get(); }
 
@@ -96,9 +96,14 @@ class RemoteSuggestionsDatabaseTest : public testing::Test {
   MOCK_METHOD1(OnImageLoaded, void(std::string));
 
  private:
-  base::ScopedTempDir database_dir_;
+  std::map<std::string, SnippetProto> suggestion_db_storage_;
+  std::map<std::string, SnippetImageProto> image_db_storage_;
+
+  // Owned by |db_|.
+  FakeDB<SnippetProto>* suggestion_db_;
+  FakeDB<SnippetImageProto>* image_db_;
+
   std::unique_ptr<RemoteSuggestionsDatabase> db_;
-  base::test::ScopedTaskEnvironment scoped_task_environment_;
 
   DISALLOW_COPY_AND_ASSIGN(RemoteSuggestionsDatabaseTest);
 };
@@ -109,7 +114,9 @@ TEST_F(RemoteSuggestionsDatabaseTest, Init) {
   CreateDatabase();
   EXPECT_FALSE(db()->IsInitialized());
 
-  RunUntilIdle();
+  suggestion_db()->InitCallback(true);
+  image_db()->InitCallback(true);
+
   EXPECT_TRUE(db()->IsInitialized());
 }
 
@@ -125,11 +132,19 @@ TEST_F(RemoteSuggestionsDatabaseTest, LoadBeforeInit) {
                   base::Bind(&RemoteSuggestionsDatabaseTest::OnImageLoaded,
                              base::Unretained(this)));
 
-  // They should be serviced once initialization finishes.
+  suggestion_db()->InitCallback(true);
+  image_db()->InitCallback(true);
+  EXPECT_TRUE(db()->IsInitialized());
+
   EXPECT_CALL(*this, OnSnippetsLoadedImpl(_));
   EXPECT_CALL(*this, OnImageLoaded(_));
-  RunUntilIdle();
-  EXPECT_TRUE(db()->IsInitialized());
+  // Note: "Load" means "load everything in the DB" (which we do for
+  // suggestions), while "Get" means "load a single item from the DB" (which we
+  // do for images).
+  // Note 2: |suggestion_db| and |image_db| are fakes which pass the proper data
+  // back to the callback themselves.
+  suggestion_db()->LoadCallback(true);
+  image_db()->GetCallback(true);
 }
 
 TEST_F(RemoteSuggestionsDatabaseTest, LoadAfterInit) {
@@ -137,7 +152,9 @@ TEST_F(RemoteSuggestionsDatabaseTest, LoadAfterInit) {
   EXPECT_FALSE(db()->IsInitialized());
 
   EXPECT_CALL(*this, OnSnippetsLoadedImpl(_)).Times(0);
-  RunUntilIdle();
+
+  suggestion_db()->InitCallback(true);
+  image_db()->InitCallback(true);
   EXPECT_TRUE(db()->IsInitialized());
 
   Mock::VerifyAndClearExpectations(this);
@@ -146,16 +163,19 @@ TEST_F(RemoteSuggestionsDatabaseTest, LoadAfterInit) {
   db()->LoadSnippets(
       base::Bind(&RemoteSuggestionsDatabaseTest::OnSnippetsLoaded,
                  base::Unretained(this)));
+  suggestion_db()->LoadCallback(true);
+
   EXPECT_CALL(*this, OnImageLoaded(_));
   db()->LoadImage("id",
                   base::Bind(&RemoteSuggestionsDatabaseTest::OnImageLoaded,
                              base::Unretained(this)));
-  RunUntilIdle();
+  image_db()->GetCallback(true);
 }
 
 TEST_F(RemoteSuggestionsDatabaseTest, Save) {
   CreateDatabase();
-  RunUntilIdle();
+  suggestion_db()->InitCallback(true);
+  image_db()->InitCallback(true);
   ASSERT_TRUE(db()->IsInitialized());
 
   std::unique_ptr<RemoteSuggestion> snippet = CreateTestSuggestion();
@@ -164,6 +184,8 @@ TEST_F(RemoteSuggestionsDatabaseTest, Save) {
   // Store a snippet and an image.
   db()->SaveSnippet(*snippet);
   db()->SaveImage(snippet->id(), image_data);
+  suggestion_db()->UpdateCallback(true);
+  image_db()->UpdateCallback(true);
 
   // Make sure they're there.
   EXPECT_CALL(*this,
@@ -171,7 +193,7 @@ TEST_F(RemoteSuggestionsDatabaseTest, Save) {
   db()->LoadSnippets(
       base::Bind(&RemoteSuggestionsDatabaseTest::OnSnippetsLoaded,
                  base::Unretained(this)));
-  RunUntilIdle();
+  suggestion_db()->LoadCallback(true);
 
   Mock::VerifyAndClearExpectations(this);
 
@@ -179,12 +201,13 @@ TEST_F(RemoteSuggestionsDatabaseTest, Save) {
   db()->LoadImage(snippet->id(),
                   base::Bind(&RemoteSuggestionsDatabaseTest::OnImageLoaded,
                              base::Unretained(this)));
-  RunUntilIdle();
+  image_db()->GetCallback(true);
 }
 
-TEST_F(RemoteSuggestionsDatabaseTest, DISABLED_SavePersist) {
+TEST_F(RemoteSuggestionsDatabaseTest, SavePersist) {
   CreateDatabase();
-  RunUntilIdle();
+  suggestion_db()->InitCallback(true);
+  image_db()->InitCallback(true);
   ASSERT_TRUE(db()->IsInitialized());
 
   std::unique_ptr<RemoteSuggestion> snippet = CreateTestSuggestion();
@@ -193,36 +216,45 @@ TEST_F(RemoteSuggestionsDatabaseTest, DISABLED_SavePersist) {
   // Store a snippet and an image.
   db()->SaveSnippet(*snippet);
   db()->SaveImage(snippet->id(), image_data);
-  RunUntilIdle();
+  suggestion_db()->UpdateCallback(true);
+  image_db()->UpdateCallback(true);
 
   // They should still exist after recreating the database.
   CreateDatabase();
+  suggestion_db()->InitCallback(true);
+  image_db()->InitCallback(true);
+  ASSERT_TRUE(db()->IsInitialized());
 
   EXPECT_CALL(*this,
               OnSnippetsLoadedImpl(ElementsAre(PointeeEq(snippet.get()))));
   db()->LoadSnippets(
       base::Bind(&RemoteSuggestionsDatabaseTest::OnSnippetsLoaded,
                  base::Unretained(this)));
+  suggestion_db()->LoadCallback(true);
+
   EXPECT_CALL(*this, OnImageLoaded(image_data));
   db()->LoadImage(snippet->id(),
                   base::Bind(&RemoteSuggestionsDatabaseTest::OnImageLoaded,
                              base::Unretained(this)));
-  RunUntilIdle();
+  image_db()->GetCallback(true);
 }
 
 TEST_F(RemoteSuggestionsDatabaseTest, Update) {
   CreateDatabase();
-  RunUntilIdle();
+  suggestion_db()->InitCallback(true);
+  image_db()->InitCallback(true);
   ASSERT_TRUE(db()->IsInitialized());
 
   std::unique_ptr<RemoteSuggestion> snippet = CreateTestSuggestion();
 
   // Store a snippet.
   db()->SaveSnippet(*snippet);
+  suggestion_db()->UpdateCallback(true);
 
   // Change it.
   snippet->set_dismissed(true);
   db()->SaveSnippet(*snippet);
+  suggestion_db()->UpdateCallback(true);
 
   // Make sure we get the updated version.
   EXPECT_CALL(*this,
@@ -230,18 +262,20 @@ TEST_F(RemoteSuggestionsDatabaseTest, Update) {
   db()->LoadSnippets(
       base::Bind(&RemoteSuggestionsDatabaseTest::OnSnippetsLoaded,
                  base::Unretained(this)));
-  RunUntilIdle();
+  suggestion_db()->LoadCallback(true);
 }
 
 TEST_F(RemoteSuggestionsDatabaseTest, Delete) {
   CreateDatabase();
-  RunUntilIdle();
+  suggestion_db()->InitCallback(true);
+  image_db()->InitCallback(true);
   ASSERT_TRUE(db()->IsInitialized());
 
   std::unique_ptr<RemoteSuggestion> snippet = CreateTestSuggestion();
 
   // Store a snippet.
   db()->SaveSnippet(*snippet);
+  suggestion_db()->UpdateCallback(true);
 
   // Make sure it's there.
   EXPECT_CALL(*this,
@@ -249,24 +283,26 @@ TEST_F(RemoteSuggestionsDatabaseTest, Delete) {
   db()->LoadSnippets(
       base::Bind(&RemoteSuggestionsDatabaseTest::OnSnippetsLoaded,
                  base::Unretained(this)));
-  RunUntilIdle();
+  suggestion_db()->LoadCallback(true);
 
   Mock::VerifyAndClearExpectations(this);
 
   // Delete the snippet.
   db()->DeleteSnippet(snippet->id());
+  suggestion_db()->UpdateCallback(true);
 
   // Make sure it's gone.
   EXPECT_CALL(*this, OnSnippetsLoadedImpl(IsEmpty()));
   db()->LoadSnippets(
       base::Bind(&RemoteSuggestionsDatabaseTest::OnSnippetsLoaded,
                  base::Unretained(this)));
-  RunUntilIdle();
+  suggestion_db()->LoadCallback(true);
 }
 
 TEST_F(RemoteSuggestionsDatabaseTest, DeleteSnippetDoesNotDeleteImage) {
   CreateDatabase();
-  RunUntilIdle();
+  suggestion_db()->InitCallback(true);
+  image_db()->InitCallback(true);
   ASSERT_TRUE(db()->IsInitialized());
 
   std::unique_ptr<RemoteSuggestion> snippet = CreateTestSuggestion();
@@ -274,8 +310,9 @@ TEST_F(RemoteSuggestionsDatabaseTest, DeleteSnippetDoesNotDeleteImage) {
 
   // Store a snippet and image.
   db()->SaveSnippet(*snippet);
+  suggestion_db()->UpdateCallback(true);
   db()->SaveImage(snippet->id(), image_data);
-  RunUntilIdle();
+  image_db()->UpdateCallback(true);
 
   // Make sure they're there.
   EXPECT_CALL(*this,
@@ -283,28 +320,32 @@ TEST_F(RemoteSuggestionsDatabaseTest, DeleteSnippetDoesNotDeleteImage) {
   db()->LoadSnippets(
       base::Bind(&RemoteSuggestionsDatabaseTest::OnSnippetsLoaded,
                  base::Unretained(this)));
+  suggestion_db()->LoadCallback(true);
+
   EXPECT_CALL(*this, OnImageLoaded(image_data));
   db()->LoadImage(snippet->id(),
                   base::Bind(&RemoteSuggestionsDatabaseTest::OnImageLoaded,
                              base::Unretained(this)));
-  RunUntilIdle();
+  image_db()->GetCallback(true);
 
   Mock::VerifyAndClearExpectations(this);
 
   // Delete the snippet.
   db()->DeleteSnippet(snippet->id());
+  suggestion_db()->UpdateCallback(true);
 
   // Make sure the image is still there.
   EXPECT_CALL(*this, OnImageLoaded(image_data));
   db()->LoadImage(snippet->id(),
                   base::Bind(&RemoteSuggestionsDatabaseTest::OnImageLoaded,
                              base::Unretained(this)));
-  RunUntilIdle();
+  image_db()->GetCallback(true);
 }
 
 TEST_F(RemoteSuggestionsDatabaseTest, DeleteImage) {
   CreateDatabase();
-  RunUntilIdle();
+  suggestion_db()->InitCallback(true);
+  image_db()->InitCallback(true);
   ASSERT_TRUE(db()->IsInitialized());
 
   std::unique_ptr<RemoteSuggestion> snippet = CreateTestSuggestion();
@@ -312,71 +353,82 @@ TEST_F(RemoteSuggestionsDatabaseTest, DeleteImage) {
 
   // Store the image.
   db()->SaveImage(snippet->id(), image_data);
-  RunUntilIdle();
+  image_db()->UpdateCallback(true);
 
   // Make sure the image is there.
   EXPECT_CALL(*this, OnImageLoaded(image_data));
   db()->LoadImage(snippet->id(),
                   base::Bind(&RemoteSuggestionsDatabaseTest::OnImageLoaded,
                              base::Unretained(this)));
-  RunUntilIdle();
+  image_db()->GetCallback(true);
 
   Mock::VerifyAndClearExpectations(this);
 
   // Delete the snippet.
   db()->DeleteImage(snippet->id());
+  image_db()->UpdateCallback(true);
 
   // Make sure the image is gone.
   EXPECT_CALL(*this, OnImageLoaded(std::string()));
   db()->LoadImage(snippet->id(),
                   base::Bind(&RemoteSuggestionsDatabaseTest::OnImageLoaded,
                              base::Unretained(this)));
-  RunUntilIdle();
+  image_db()->GetCallback(true);
 }
-
-namespace {
-
-void LoadExpectedImage(RemoteSuggestionsDatabase* db,
-                       const std::string& id,
-                       const std::string& expected_data) {
-  base::RunLoop run_loop;
-  db->LoadImage(id, base::Bind(
-                        [](base::Closure signal, std::string expected_data,
-                           std::string actual_data) {
-                          EXPECT_THAT(actual_data, Eq(expected_data));
-                          signal.Run();
-                        },
-                        run_loop.QuitClosure(), expected_data));
-  run_loop.Run();
-}
-
-}  // namespace
 
 TEST_F(RemoteSuggestionsDatabaseTest, ShouldGarbageCollectImages) {
   CreateDatabase();
-  RunUntilIdle();
+  suggestion_db()->InitCallback(true);
+  image_db()->InitCallback(true);
   ASSERT_TRUE(db()->IsInitialized());
 
   // Store images.
   db()->SaveImage("snippet-id-1", "pretty-image-1");
+  image_db()->UpdateCallback(true);
   db()->SaveImage("snippet-id-2", "pretty-image-2");
+  image_db()->UpdateCallback(true);
   db()->SaveImage("snippet-id-3", "pretty-image-3");
-  RunUntilIdle();
+  image_db()->UpdateCallback(true);
 
   // Make sure the to-be-garbage collected images are there.
-  LoadExpectedImage(db(), "snippet-id-1", "pretty-image-1");
-  LoadExpectedImage(db(), "snippet-id-3", "pretty-image-3");
+  EXPECT_CALL(*this, OnImageLoaded("pretty-image-1"));
+  db()->LoadImage("snippet-id-1",
+                  base::Bind(&RemoteSuggestionsDatabaseTest::OnImageLoaded,
+                             base::Unretained(this)));
+  image_db()->GetCallback(true);
+
+  EXPECT_CALL(*this, OnImageLoaded("pretty-image-3"));
+  db()->LoadImage("snippet-id-3",
+                  base::Bind(&RemoteSuggestionsDatabaseTest::OnImageLoaded,
+                             base::Unretained(this)));
+  image_db()->GetCallback(true);
 
   // Garbage collect all except the second.
-  db()->GarbageCollectImages(base::MakeUnique<std::set<std::string>>(
+  db()->GarbageCollectImages(std::make_unique<std::set<std::string>>(
       std::set<std::string>({"snippet-id-2"})));
-  RunUntilIdle();
+  // This will first load all image IDs, then delete the not-referenced ones.
+  image_db()->LoadKeysCallback(true);
+  image_db()->UpdateCallback(true);
 
   // Make sure the images are gone.
-  LoadExpectedImage(db(), "snippet-id-1", "");
-  LoadExpectedImage(db(), "snippet-id-3", "");
+  EXPECT_CALL(*this, OnImageLoaded(std::string()));
+  db()->LoadImage("snippet-id-1",
+                  base::Bind(&RemoteSuggestionsDatabaseTest::OnImageLoaded,
+                             base::Unretained(this)));
+  image_db()->GetCallback(true);
+
+  EXPECT_CALL(*this, OnImageLoaded(std::string()));
+  db()->LoadImage("snippet-id-3",
+                  base::Bind(&RemoteSuggestionsDatabaseTest::OnImageLoaded,
+                             base::Unretained(this)));
+  image_db()->GetCallback(true);
+
   // Make sure the second still exists.
-  LoadExpectedImage(db(), "snippet-id-2", "pretty-image-2");
+  EXPECT_CALL(*this, OnImageLoaded("pretty-image-2"));
+  db()->LoadImage("snippet-id-2",
+                  base::Bind(&RemoteSuggestionsDatabaseTest::OnImageLoaded,
+                             base::Unretained(this)));
+  image_db()->GetCallback(true);
 }
 
 }  // namespace ntp_snippets
